modify the rjb document

--- a/_posts/2014-03-26-RJB.md
+++ b/_posts/2014-03-26-RJB.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "start RJB"
+title:  "Start RJB"
 date:   2014-03-26 11:31:59
 categories: jekyll update
 excerpt: 一个桥梁程序，连接ruby和java的
@@ -79,13 +79,14 @@ ENV['LD_LIBRARY_PATH'] = "#{ENV['LD_LIBRARY_PATH']}:#{ENV['JAVA_HOME]}/jre/lib/i
 
 * 在OS X中，rjb不找JAVA_HOME的环境变量，它直接找/System/Library/Frameworks/JavaVM.framework/Libraries/libjvm_compat.dylib。 所以你需要使用/System/Library/Frameworks/JavaVM.framework/Libraries symbolic link设置正确的java版本。
 
-rjb是必须的
+
+### rjb是必须的
 
 ```
 require 'rjb'
 ```
 
-载入jvm
+### 载入jvm
 
 ```
 Rjb::load(classpath = '.', jvmargs=[])
@@ -95,7 +96,7 @@ ClassPath是客户端提供的运行时类目录。Rjb使用PATH_SEP字符串连
 
 jvmargs是字符串数组，是jvm的参数
 
-ex)
+ex.
 
 ```
 Rjb::load(nil, ['-verbose:gc', '-Dfoo.bar=FooBar'])
@@ -103,7 +104,7 @@ Rjb::load(nil, ['-verbose:gc', '-Dfoo.bar=FooBar'])
 
 如果你不需要指定类目录和JVM的参数，这部分可以跳过。
 
-导入java Class到ruby
+### 导入java Class到ruby
 
 ```
 str = Rjb::import('java.lang.String')  # import String class into the varibale 'str'
@@ -111,7 +112,7 @@ str = Rjb::import('java.lang.String')  # import String class into the varibale '
 
 调用了这行代码， str就是java.langString类了。
 
-实例化对象
+### 实例化对象
 
 ```
 instance = str.new
@@ -178,7 +179,7 @@ irb(main):004:0> p s.toString
 irb(main):005:0>
 ```
 
-调用实例的方法
+### 调用实例的方法
 
 在Java
 
@@ -194,7 +195,7 @@ s = instance.replaceAll('hiki', 'rwiki')
 
 在rjb, 返回的字符串会强制转换成Ruby的字符串，而不是java.lang.String的实例。
 
-调用重载的方法（带类型信息）
+### 调用重载的方法（带类型信息）
 Rjb检查参数的类型，来确定调用哪个方法。但是它不完整（假设有这种情况，如果有三个方法 void foo(int), void foo(short), void foo(long), 当参数时30)，这种情况你需要使用ojb#_invoke来调用。例如：
 
 ```
@@ -207,7 +208,7 @@ name: 调用的方法名称
 
 sig: 类型标签，见上面。
 
-访问字段
+### 访问字段
 
 静态字段
 
@@ -229,7 +230,7 @@ puts "x=#{p.x}, y=#{p.y}"
 x=0, y=80
 ```
 
-绑定Ruby对象到java的接口
+### 绑定Ruby对象到java的接口
 
 你可以把Ruby的对象绑定到java的接口上，只要这个对象有责任返回来自java世界的方法。
 
@@ -252,7 +253,7 @@ obj, ruby对象
 name, java的接口名称
 return 绑定到特定接口的新对象。
 
-在ruby中抛出java异常。
+### 在ruby中抛出java异常。
 
 ```
 class Iterator
@@ -276,7 +277,7 @@ classname
 message
 原因的描述
 
-检查对象的类
+### 检查对象的类
 
 rjb为每个实例增加了叫_classname的方法。 这个方法返回它的类的名称
 
